Fix dock button spacing in small player and inset controlbar for audio player JW7-3943

--- a/src/css/flags/time-slider-above.less
+++ b/src/css/flags/time-slider-above.less
@@ -21,29 +21,7 @@
   dock
   */
 
-  .jw-dock {
-    margin: 0;
-  }
 
-  &:not(.jw-breakpoint-0) {
-
-    // give dock some padding
-    .jw-dock {
-      padding: 0 1%;
-    }
-
-    // give dock buttons some space between each other above smallest breakpoint
-    .jw-dock-button {
-      margin: 2% 1%;
-    }
-
-  }
-
-  .jw-dock-button {
-    margin: 1px;
-    height: @mobile-touch-target;
-    width: @mobile-touch-target;
-  }
 
   /* ==================================================
   display
